--- a/.github/workflows/command1.yaml
+++ b/.github/workflows/command1.yaml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
  
-# Required to get the ID Token that will be used for OIDC
+# Required to get the ID Tokens that will be used for OIDC
 permissions:
   id-token: write
   contents: read # needed for private repos to checkout
