--- a/.github/workflows/command1.yaml
+++ b/.github/workflows/command1.yaml
@@ -25,5 +25,5 @@ jobs:
           role-to-assume: arn:aws:iam::481008523238:role/sts-lab-2-target
           role-session-name: OIDCSession
  
-      - run: aws sts get-caller-identity
+      - run: aws secretsmanager get-secret-value --secret-id flag_sts_lab_2
         shell: bash
